# DataService

./: CMakeLists.txt  Client.cpp  Client.hpp  Readme.dvi  SQLiteException.cpp  SQLiteException.hpp  Server.cpp  Server.hpp  ServerTest.cpp  ServerTest.hpp  UnitTests.cpp  UnitTests.hpp  main.cpp  readme  vcpkg.json
